// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useFundFromPeachWallet should open confirmation popup 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#1A1210",
          "height": "100%",
          "opacity": 0.62,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
    <View
      style={
        {
          "borderRadius": 16,
          "marginLeft": 12,
          "marginRight": 12,
          "overflow": "hidden",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "stretch",
              "backgroundColor": "#FEEDE5",
              "gap": 12,
              "paddingBottom": 24,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 16,
            },
            [
              undefined,
              {
                "alignItems": "stretch",
              },
            ],
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              false,
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Bold",
                "fontSize": 24,
                "letterSpacing": 0.24,
                "lineHeight": 32,
                "width": "100%",
              },
              false,
            ]
          }
        >
          funding escrow
        </Text>
        <View
          style={
            {
              "gap": 12,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                undefined,
                false,
              ]
            }
          >
            You're funding the escrow with your Peach wallet. You're sending:
          </Text>
          <View
            style={
              [
                undefined,
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
                {
                  "height": 13,
                  "width": 152,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "flexShrink": 0,
                  },
                  {
                    "paddingBottom": 2.5,
                    "paddingLeft": 2.5,
                    "paddingRight": 2.5,
                    "paddingTop": 2.5,
                  },
                ]
              }
            >
              <test-file-stub
                fill="#888"
                style={
                  [
                    {
                      "height": 15,
                      "width": 15,
                    },
                    undefined,
                  ]
                }
              />
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexBasis": "0%",
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  {
                    "gap": 5,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexBasis": "0%",
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "flex-end",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      false,
                      [
                        {
                          "opacity": 0.1,
                          "textAlign": "right",
                        },
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 28,
                            "marginBottom": -13,
                            "marginTop": -13,
                          },
                          {
                            "color": "#2B1911",
                          },
                        ],
                      ],
                      false,
                    ]
                  }
                >
                  0.00
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      false,
                      [
                        {
                          "textAlign": "right",
                        },
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 28,
                            "marginBottom": -13,
                            "marginTop": -13,
                          },
                          {
                            "color": "#2B1911",
                          },
                        ],
                      ],
                      false,
                    ]
                  }
                >
                   250 000
                </Text>
              </View>
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    false,
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 28,
                        "marginBottom": -13,
                        "marginTop": -13,
                      },
                      {
                        "color": "#2B1911",
                      },
                    ],
                    false,
                  ]
                }
              >
                sats
              </Text>
            </View>
          </View>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                undefined,
                false,
              ]
            }
          >
            to:
             
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  false,
                  [
                    {
                      "color": "#EAE3DF",
                    },
                    undefined,
                  ],
                  false,
                ]
              }
            >
              bcrt
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    false,
                    [
                      {
                        "color": "#2B1911",
                      },
                      undefined,
                    ],
                    false,
                  ]
                }
              >
                1q70z
              </Text>
              7 ... 4
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    false,
                    [
                      {
                        "color": "#2B1911",
                      },
                      undefined,
                    ],
                    false,
                  ]
                }
              >
                c0fuh
              </Text>
            </Text>
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                undefined,
                false,
              ]
            }
          >
            network fee: 660 sats (6 sat/vB)
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#F56522",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexGrow": 1,
              "gap": 4,
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 8,
            }
          }
        >
          <test-file-stub
            fill="#FFFCFA"
            style={
              [
                {
                  "height": 16,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                [
                  {
                    "color": "#FFFCFA",
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  undefined,
                ],
                false,
              ]
            }
          >
            cancel
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row-reverse",
              "flexGrow": 1,
              "gap": 4,
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 8,
            }
          }
        >
          <test-file-stub
            fill="#FFFCFA"
            style={
              [
                {
                  "height": 16,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                [
                  {
                    "color": "#FFFCFA",
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  undefined,
                ],
                false,
              ]
            }
          >
            confirm & send
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`useFundFromPeachWallet should open insufficient funds popup 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#1A1210",
          "height": "100%",
          "opacity": 0.62,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
    <View
      style={
        {
          "borderRadius": 16,
          "marginLeft": 12,
          "marginRight": 12,
          "overflow": "hidden",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "stretch",
              "backgroundColor": "#FEEDE5",
              "gap": 12,
              "paddingBottom": 24,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 16,
            },
            [
              undefined,
              {
                "alignItems": "stretch",
              },
            ],
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              false,
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Bold",
                "fontSize": 24,
                "letterSpacing": 0.24,
                "lineHeight": 32,
                "width": "100%",
              },
              false,
            ]
          }
        >
          insufficient funds
        </Text>
        <View
          style={
            {
              "gap": 12,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                undefined,
                false,
              ]
            }
          >
            Your Peach wallet has:
          </Text>
          <View
            style={
              [
                undefined,
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
                {
                  "height": 13,
                  "width": 152,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "flexShrink": 0,
                  },
                  {
                    "paddingBottom": 2.5,
                    "paddingLeft": 2.5,
                    "paddingRight": 2.5,
                    "paddingTop": 2.5,
                  },
                ]
              }
            >
              <test-file-stub
                fill="#888"
                style={
                  [
                    {
                      "height": 15,
                      "width": 15,
                    },
                    undefined,
                  ]
                }
              />
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexBasis": "0%",
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  {
                    "gap": 5,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexBasis": "0%",
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "flex-end",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      false,
                      [
                        {
                          "opacity": 0.1,
                          "textAlign": "right",
                        },
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 28,
                            "marginBottom": -13,
                            "marginTop": -13,
                          },
                          {
                            "color": "#2B1911",
                          },
                        ],
                      ],
                      false,
                    ]
                  }
                >
                  0.00
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      false,
                      [
                        {
                          "textAlign": "right",
                        },
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 28,
                            "marginBottom": -13,
                            "marginTop": -13,
                          },
                          {
                            "color": "#2B1911",
                          },
                        ],
                      ],
                      false,
                    ]
                  }
                >
                   250 000
                </Text>
              </View>
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    false,
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 28,
                        "marginBottom": -13,
                        "marginTop": -13,
                      },
                      {
                        "color": "#2B1911",
                      },
                    ],
                    false,
                  ]
                }
              >
                sats
              </Text>
            </View>
          </View>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                undefined,
                false,
              ]
            }
          >
            Do you want to fund the escrow with this amount?
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                undefined,
                false,
              ]
            }
          >
            to:
             
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  false,
                  [
                    {
                      "color": "#EAE3DF",
                    },
                    undefined,
                  ],
                  false,
                ]
              }
            >
              bcrt
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    false,
                    [
                      {
                        "color": "#2B1911",
                      },
                      undefined,
                    ],
                    false,
                  ]
                }
              >
                1q70z
              </Text>
              7 ... 4
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    false,
                    [
                      {
                        "color": "#2B1911",
                      },
                      undefined,
                    ],
                    false,
                  ]
                }
              >
                c0fuh
              </Text>
            </Text>
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                undefined,
                false,
              ]
            }
          >
            network fee: 660 sats (6 sat/vB)
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#F56522",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexGrow": 1,
              "gap": 4,
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 8,
            }
          }
        >
          <test-file-stub
            fill="#FFFCFA"
            style={
              [
                {
                  "height": 16,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                [
                  {
                    "color": "#FFFCFA",
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  undefined,
                ],
                false,
              ]
            }
          >
            cancel
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row-reverse",
              "flexGrow": 1,
              "gap": 4,
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 8,
            }
          }
        >
          <test-file-stub
            fill="#FFFCFA"
            style={
              [
                {
                  "height": 16,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                [
                  {
                    "color": "#FFFCFA",
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  undefined,
                ],
                false,
              ]
            }
          >
            confirm & send
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
